# wecc240

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: validate.yaml
docs/: index.html  search.js  wecc240.html  wecc240_2011.html
docs/wecc240/: aggregate_load.html  viewer.html  wecc240_2011.html
test/: test.py  test.sh
wecc240/: README.md  __init__.py  aggregate_gens.py  aggregate_load.py  aggregate_loads.py  scheduling.py  viewer.py  wecc240_2011.py  wecc240_2018.py
wecc240/Canada/: README.md  aeso.py  bchydro.py  c2c10y.csv  c2u6xt.csv  imports.csv  loads.csv
wecc240/Canada/AESO/: FFR.csv
wecc240/Canada/BCHydro/: imports.csv  loads.csv
wecc240/Mexico/: 9mtzm4.csv  README.md  mexicali.py
wecc240/data/: WECC240_2018_Generation_scheduling.xlsx
wecc240/gis/: wecc240.csv
